--- a/TYROversion1/package.json
+++ b/TYROversion1/package.json
@@ -1,5 +1,9 @@
 {
   "name": "tyroversion1",
+  "engines": {
+    "node": "14.15.0",
+    "npm": "6.14.8"
+  },
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -8,17 +12,17 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
+    "postinstall": "ng build --output-path angularapp  --aot --prod"
   },
   "private": true,
   "dependencies": {
     "-": "0.0.1",
-    "@angular/cli": "~10.2.0",
-    "@angular/compiler-cli": "~10.2.0",
     "@angular/animations": "^10.2.3",
     "@angular/cdk": "^10.2.7",
+    "@angular/cli": "~10.2.0",
     "@angular/common": "~10.2.0",
     "@angular/compiler": "~10.2.0",
+    "@angular/compiler-cli": "~10.2.0",
     "@angular/core": "~10.2.0",
     "@angular/forms": "~10.2.0",
     "@angular/material": "^10.2.7",
@@ -35,8 +39,8 @@
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "ngx-ellipsis": "^3.0.0",
-    "path": "^0.12.7",
     "ngx-toastr": "^13.1.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "timeago.js": "^4.0.2",
     "tslib": "^2.0.0",
@@ -62,9 +66,5 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
-  },
-  "engines": {
-    "node": "14.15.0",
-    "npm": "6.14.8"
   }
 }
