--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "angularapp",
+  "name": "tyroversion1",
+  "version": "0.0.0",
   "engines": {
     "node": "14.15.0",
     "npm": "6.14.8"
   },
-  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
@@ -12,22 +12,22 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --output-path angularapp  --aot --prod"
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.2.3",
+    "@angular/animations": "^11.0.2",
     "@angular/cli": "^11.0.2",
-    "@angular/compiler-cli": "^10.2.3",
+    "@angular/compiler-cli": "^11.0.2",
     "@angular/cdk": "^10.2.7",
-    "@angular/common": "~10.2.0",
-    "@angular/compiler": "~10.2.0",
-    "@angular/core": "~10.2.0",
-    "@angular/forms": "~10.2.0",
+    "@angular/common": "~11.0.2",
+    "@angular/compiler": "~11.0.2",
+    "@angular/core": "~11.0.2",
+    "@angular/forms": "~11.0.2",
     "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "~10.2.0",
-    "@angular/platform-browser-dynamic": "~10.2.0",
-    "@angular/router": "~10.2.0",
+    "@angular/platform-browser": "~11.0.2",
+    "@angular/platform-browser-dynamic": "~11.0.2",
+    "@angular/router": "~11.0.2",
     "@fortawesome/angular-fontawesome": "^0.8.0",
     "@fortawesome/fontawesome-common-types": "^0.2.32",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
@@ -49,7 +49,6 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1002.0",
     "@angular/cli": "^11.0.2",
-    "@angular/compiler-cli": "^10.2.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
